<resources>
    <string name="app_name">Pomodoro Study App</string>
    <string name="reset_time">Reset Time</string>
    <string name="minutes">minutes</string>
    <string name="_00_00">00:00</string>
    <string name="start_study_time">Start Study Time</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="back">Back</string>
    <string name="set_time">Set Time</string>
    <string name="settings">Settings</string>
    <string name="pause_break">Pause break</string>
    <string name="pause_pomodoro">Pause Pomodoro</string>
    <string name="start_study">Start Study</string>

</resources>